--- a/css/styles.css
+++ b/css/styles.css
@@ -3852,6 +3852,28 @@ td:last-child {
     color      : var(--color-text-light) !important;
 }
 
+#about {
+    list-style : none;
+    margin-left: 0;
+}
+
+#about li {
+    padding: 0;
+}
+
+#about a:focus,
+#about a:hover {
+    color: #cc442c;
+}
+
+#experience {
+    display    : block;
+    font-size  : var(--text-size);
+    font-weight: 300;
+    line-height: 1.2;
+    color      : var(--color-text-light) !important;
+}
+
 /* ------------------------------------------------------------------- 
  * responsive:
  * about
@@ -4063,7 +4085,7 @@ td:last-child {
 
 
 /* ===================================================================
- * # NUMBERS
+ * # skills
  *
  *
  * ------------------------------------------------------------------- */
@@ -4080,6 +4102,20 @@ td:last-child {
     background-color: var(--color-gray-10);
     color           : var(--color-text-light);
 }
+
+
+#certificates a {
+    color: var(--color-text-light);
+    background-image: url(/w/skins/Vector/resources/common/images/link-external-small-ltr-progressive.svg?30a3a);
+}
+
+#certificates a:focus,
+#certificates a:hover {
+    color: #cc442c;
+}
+
+
+
 .s-numbers h5 {
     font-family  : var(--font-1);
     font-weight  : 500;
@@ -4111,7 +4147,7 @@ td:last-child {
 
 /* ------------------------------------------------------------------- 
  * responsive:
- * numbers
+ * skills
  * ------------------------------------------------------------------- */
 @media screen and (max-width: 1000px) {
     .counter-items .num {
@@ -4218,25 +4254,6 @@ td:last-child {
 .s-footer .link-list a:hover {
     color: white;
 }
-
-
-
-
-#about {
-    list-style : none;
-    margin-left: 0;
-}
-
-#about li {
-    padding: 0;
-}
-
-#about a:focus,
-#about a:hover {
-    color: #cc442c;
-}
-
-
 
 
 /* ------------------------------------------------------------------- 
